--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -72,7 +72,7 @@
 										th:each="notification : ${notifications}" th:href="${notification.link}">
 										<div class="d-flex w-100 justify-content-between">
 											<h6 class="mb-1" th:text="${notification.text}">List group item heading</h6>
-											<small><input class="form-check-input me-1" type="checkbox" value=""
+											<small><input class="isread-notification-input form-check-input me-1" type="checkbox" value=""
 													th:value="${notification.id}" th:checked="${notification.isRead}"
 													aria-label="Marcar como lido"></small>
 										</div>
