--- a/src/main/resources/templates/users/topic-edit.html
+++ b/src/main/resources/templates/users/topic-edit.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org"
 	th:replace="~{fragments/layout :: base ('Tópico', ~{::body}, _, _, ~{::style})}">
+
 <head>
-<meta charset="utf-8">
-<style type="text/css">
-#editor-container {
-	height: 350px;
-}
-</style>
+	<meta charset="utf-8">
+	<style type="text/css">
+		#editor-container {
+			height: 350px;
+		}
+	</style>
 </head>
+
 <body>
 	<div class="container">
-		<div class="alert alert-error alert-dismissible fade show" role="alert"
-			th:if="${!#strings.isEmpty(message)}">
+		<div class="alert alert-error alert-dismissible fade show" role="alert" th:if="${!#strings.isEmpty(message)}">
 			<span class="text-center" th:utext=${message}></span>
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
@@ -28,7 +29,8 @@
 					</ol>
 				</nav>
 
-				<h5 class="card-title text-center fw-bold" th:text="|Tópico #${topic.id} - ${topic.status.displayName}|">Tópico
+				<h5 class="card-title text-center fw-bold"
+					th:text="|Tópico #${topic.id} - ${topic.status.displayName}|">Tópico
 					#146</h5>
 
 				<form action="#" method="post" th:action="@{/users/topic/{id}(id=${topic.id})}" th:object="${topic}">
@@ -37,7 +39,8 @@
 					<div class="mb-4">
 						<label class="form-label fw-bold" for="name">Nome</label>
 
-						<input id="name" type="text" class="form-control" placeholder="Nome do Tópico" th:field="*{name}">
+						<input id="name" type="text" class="form-control" placeholder="Nome do Tópico"
+							th:field="*{name}">
 
 						<span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Nome inválido</span>
 					</div>
@@ -116,13 +119,13 @@
 	<script type="text/javascript" th:src="@{/js/quill-utils.js}"></script>
 
 	<script type="text/javascript" th:inline="javascript">
-		(function() {
-			let topicStatus = /*[[${topic.status}]]*/null;
+		(function () {
+			const topicStatus = /*[[${topic.status}]]*/null;
 
 			if (topicStatus === 'EDITABLE') {
-				let bodyEditor = new Quill('#body-editor', EditorOptions.TOPIC);
+				const bodyEditor = new Quill('#body-editor', EditorOptions.TOPIC);
 
-				$('form').submit(function(event) {
+				$('form').submit(function (event) {
 					$('#bodyHtml').val(bodyEditor.root.innerHTML);
 				});
 			} else {
