--- a/src/main/resources/templates/subjects/topic-details.html
+++ b/src/main/resources/templates/subjects/topic-details.html
@@ -119,7 +119,7 @@
 														placeholder="Alternativa" required>Alternativa 1</textarea>
 													<input type="text" class="form-control"
 														th:field="*{alternatives[__${itemStat.index}__].feedback.title}"
-														placeholder="Feedback da alternativa">
+														placeholder="Feedback da alternativa" required>
 												</div>
 												<div class="form-check me-3">
 													<input type="checkbox"
