--- a/src/main/resources/templates/games/playing.html
+++ b/src/main/resources/templates/games/playing.html
@@ -56,7 +56,7 @@
 					<div id="alternatives" class="my-4"></div>
 
 					<div class="d-grid col-6 mx-auto mt-3">
-						<button id="answer-question-button" type="button" class="btn btn-secondary">Responder</button>
+						<button id="answer-question-button" type="button" class="btn btn-secondary" style="display: none;">Responder</button>
 					</div>
 				</div>
 
